[gd_scene load_steps=2 format=3 uid="uid://mtymjpquybb2"]

[ext_resource type="Script" uid="uid://b80jol3mo4x8m" path="res://scripts/main.gd" id="1_o5qli"]

[node name="Main" type="Node"]
script = ExtResource("1_o5qli")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Root" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Root"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Coin Flip: Double or Nothing"

[node name="Balance" type="Label" parent="UI/Root"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_top = 23.0
offset_right = 58.0
offset_bottom = 46.0
grow_horizontal = 2
text = "Balance: $1000"

[node name="BetRow" type="HBoxContainer" parent="UI/Root"]
offset_top = 79.0
offset_right = 121.0
offset_bottom = 119.0

[node name="BetLabel" type="Label" parent="UI/Root/BetRow"]
layout_mode = 2
text = "Bet:"

[node name="Bet" type="SpinBox" parent="UI/Root/BetRow"]
layout_mode = 2
max_value = 100000.0

[node name="PickRow" type="HBoxContainer" parent="UI/Root"]
layout_mode = 0
offset_top = 165.0
offset_right = 57.0
offset_bottom = 205.0

[node name="PickHeads" type="Button" parent="UI/Root/PickRow"]
layout_mode = 2
text = "Heads"

[node name="PickTails" type="Button" parent="UI/Root/PickRow"]
layout_mode = 2
text = "Tails"

[node name="FlipBtn" type="Button" parent="UI/Root"]
layout_mode = 0
offset_left = -1.0
offset_top = 237.0
offset_right = 39.0
offset_bottom = 268.0
text = "Flip!"

[node name="RiskRow" type="HBoxContainer" parent="UI/Root"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -234.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="DoubleBtn" type="Button" parent="UI/Root/RiskRow"]
layout_mode = 2
text = "Double or Nothing"

[node name="CashOutBtn" type="Button" parent="UI/Root/RiskRow"]
layout_mode = 2
text = "Cash Out"

[node name="Result" type="Label" parent="UI/Root"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -23.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0
text = "Result"

[node name="FlipBar" type="ProgressBar" parent="UI/Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -13.5
offset_right = 2.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
